# Kyouth_Market_Consensus_Machine

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  package-lock.json  package.json  yo.txt
backend/: .dockerignore  Dockerfile  pyproject.toml
backend/src/: config.py  database.py  main.py
backend/src/models/: stock.py
backend/src/schemas/ai/: market_analysis.py  reduce_schema.py
backend/src/services/: analysis_coordinator.py  market_data.py  market_movement.py  pipeline.py
frontend/: Dockerfile  next.config.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/ticker/[symbol]/: page.tsx
test/: hello.txt
