[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.136.3",
    "google-genai>=2.7.0",
    "httpx>=0.28.1",
    "ollama>=0.6.2",
    "pydantic-settings>=2.14.1",
    "ruff>=0.15.15",
    "sqlmodel>=0.0.38",
    "uvicorn>=0.48.0",
]
